SOURCE/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Additional_Funds_needed__c</fullName>
        <label>Additional Funds needed</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Assist__c</fullName>
        <label>Admission Assist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Interventionist</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admit_location__c</fullName>
        <label>Admit Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Admit_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admitted__c</fullName>
        <label>Admitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Client_DOB__c) ) ,
  IF( DATE( 2000 , MONTH( Client_DOB__c ) , DAY( Client_DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Client_DOB__c ),
     YEAR (Today()) - YEAR ( Client_DOB__c) -1 ),
  null)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_UR__c</fullName>
        <label>Allow UR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Type__c</fullName>
        <label>Alternate Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Paid_to_Admissions__c</fullName>
        <label>Amount Paid to Admissions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Referral_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Development Information</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Accounts, Individual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Business Development Information)</relationshipLabel>
        <relationshipName>Leads6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caller_DOB__c</fullName>
        <label>Caller DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Caller_Email__c</fullName>
        <label>Caller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Caller_Phone_Type__c</fullName>
        <label>Caller Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <label>Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller_Relationship_to_Patient__c</fullName>
        <inlineHelpText>If user chooses &quot;Self&quot;, don&apos;t need to fill the patient details below. It will automatically populate.</inlineHelpText>
        <label>Caller Relationship to Patient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Brother/Sister</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Probation Officer</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_Emergency__c</fullName>
        <label>City Emer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City Sub</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Alternate_Phone__c</fullName>
        <label>Client Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_DOB__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Full_Name__c</fullName>
        <description>merge first name middle name and last name</description>
        <formula>Client_First_Name__c+&apos; &apos;+ Client_Middle_Name__c +&apos; &apos;+ Client_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Middle_Name__c</fullName>
        <label>Patient Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <label>Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship_to_Client__c</fullName>
        <label>Contact Relationship to Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brother/Sister</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Probation Officer</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Level_of_Care__c</fullName>
        <label>Current Level of Care</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIscharge_Type__c</fullName>
        <label>DIscharge Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_Sub__c</fullName>
        <label>DOB sub</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB_Text__c</fullName>
        <formula>TEXT(Client_DOB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB__Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_To_Name__c</fullName>
        <label>Discharge To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_Readmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Readmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact_Date__c</fullName>
        <label>First Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Contact_Information__c</fullName>
        <label>First Contact Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_Name__c</fullName>
        <label>First Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_Relationship__c</fullName>
        <label>First Contact Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brother/Sister</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Probation Officer</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Contact_Rep_On_Call__c</fullName>
        <label>First Contact Rep On Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Scholership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Sub__c</fullName>
        <label>Gender sub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Group_Name__c</fullName>
        <label>Insurance Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Phone__c</fullName>
        <label>Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Insurance Provider1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Insurance_Provider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Provider_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Provider</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Caller_the_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Caller the Patient?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCD__c</fullName>
        <label>LCD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Missing Info</fullName>
                </value>
                <value>
                    <fullName>Call for Facility/Staff/Client</fullName>
                </value>
                <value>
                    <fullName>Looking for other services</fullName>
                </value>
                <value>
                    <fullName>Hang up/No one on the Line</fullName>
                </value>
                <value>
                    <fullName>Medicaid/Medicare</fullName>
                </value>
                <value>
                    <fullName>No Insurance/No Funds</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Stay__c</fullName>
        <label>Length of Stay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Stabilization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Group__c</fullName>
        <label>Medical Group #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Insurance_Group_Name__c</fullName>
        <label>Medical Insurance Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Insurance_Phone__c</fullName>
        <label>Medical Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Medical_Insurance_Provider__c</fullName>
        <label>Medical Insurance Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Insurance_Provider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Member_ID__c</fullName>
        <label>Medical Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Submit_Claims_to__c</fullName>
        <label>Medical Submit Claims to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Submit_Claims_to</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_Sub__c</fullName>
        <label>Middle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_days__c</fullName>
        <label>Number of days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Referral Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Original Referral Source)</relationshipLabel>
        <relationshipName>Leads5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <label>Other Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Note__c</fullName>
        <label>Other Phone Note</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owed_Status__c</fullName>
        <label>Owed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardship</fullName>
                </value>
                <value>
                    <fullName>No Collections</fullName>
                </value>
                <value>
                    <fullName>Payment Plan</fullName>
                </value>
                <value>
                    <fullName>Payment Plan Complete</fullName>
                </value>
                <value>
                    <fullName>PIF Post Admit</fullName>
                </value>
                <value>
                    <fullName>PIF Prior to Admission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Color_Date__c</fullName>
        <label>Patient Color Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Salutation__c</fullName>
        <label>Patient Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Private Pay</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Referral_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alumni Information</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Alumni Information)</relationshipLabel>
        <relationshipName>Leads7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Sub__c</fullName>
        <label>Phone Number sub</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number MedIns</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Primary Campaign Source)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Close_Lost__c</fullName>
        <label>Reason for Close Lost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not an admissions call</fullName>
                </value>
                <value>
                    <fullName>No response to our calls</fullName>
                </value>
                <value>
                    <fullName>Financial – no insurance and no financial resources for treatment</fullName>
                </value>
                <value>
                    <fullName>Medicare/Medicaid only</fullName>
                </value>
                <value>
                    <fullName>Refused further follow-up</fullName>
                </value>
                <value>
                    <fullName>Call transfer</fullName>
                </value>
                <value>
                    <fullName>Wrong number</fullName>
                </value>
                <value>
                    <fullName>Duplicate lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Refer_Out__c</fullName>
        <label>Reason for Refer Out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INN</fullName>
                </value>
                <value>
                    <fullName>Primary mental health</fullName>
                </value>
                <value>
                    <fullName>Not willing to travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Destination</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Accounts</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Outbound Referral Destination)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Source_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads(Inbound Referring Contact)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Referral Source)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Outbound Referred To Contact)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_Information__c</fullName>
        <label>Referral Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                    <label>Business Account</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referring_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Inbound Referral)</relationshipLabel>
        <relationshipName>Leads8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Returning_to_our_care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returning to our care?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSI__c</fullName>
        <inlineHelpText>Sergical Site Infection</inlineHelpText>
        <label>SSI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_Sub__c</fullName>
        <label>SSN sub</label>
        <length>80</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Scholarship_Details__c</fullName>
        <label>Scholarship Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Search_Terms__c</fullName>
        <label>Search Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sec_Group_Number__c</fullName>
        <label>Sec Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Address_1_Sub__c</fullName>
        <label>Secondary Address 1 Sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Address_2_sub__c</fullName>
        <label>Secondary Address 2 sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_City_Sub__c</fullName>
        <label>Secondary City Sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Co_Payment__c</fullName>
        <label>Secondary Co Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_DOB_sub__c</fullName>
        <label>Secondary DOB sub</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Deductible__c</fullName>
        <label>Secondary Deductible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Gender_sub__c</fullName>
        <label>Secondary Gender sub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>